--- a/MainClient/classic/sass/src/view/main/Main.scss
+++ b/MainClient/classic/sass/src/view/main/Main.scss
@@ -24,3 +24,8 @@
 .x-item-selected {
   background-color:#B0E0E6 !important;
 }
+.candidate {
+  float: left;
+  padding: 8px;
+  margin: 8px 8px 4px 8px;
+}
